syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.recepinanc.samplegrpcserver.sample";
option java_outer_classname = "LargeObjectProto";

service LargeObjectService {
  rpc GetLargeObjects (LargeObjectRequest) returns (LargeObjectResponse) {
  }
}

message LargeObjectRequest {
  int32 count = 1;
}

message LargeObjectResponse {
  repeated LargeObject largeObjects = 1;
}

message LargeObject {
  int64 field1 = 1;
  string field2 = 2;
  Field3 field3 = 3;
  repeated Field4 field4 = 4;
}

message Field3 {
  int64 field31 = 1;
  string field32 = 2;
}

message Field4 {
  int64 field41 = 1;
  string field42 = 2;
}

